# Pallas-Bot

./: .env  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  bot.py  bot_hub.py  bot_worker.py  docker-compose.full.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml  sync-docs-to-web.yml
config/: ai_extension.example.json  compose.env.example  pallas.example.toml
deploy/: README.md
deploy/default/: README.md
docs/: Config.md  Deployment.md  DockerDeployment.md  FAQ.md  Migration-v3.md  README.md
docs/architecture/: arknights-knowledge-mcp.md  bot_process_sharding.md  common-layers.md  control-plane-corpus-federation.md  core-devx-roadmap.md  (+13 more)
openspec/: pallas-console-v1.json
pallas/: __init__.py
scripts/: README.md  fetch_arknights_duel_data.py  run_sharded_bot.sh  run_unified_bot.sh  shard_test_enter.sh  sync_arknights_data.py
templates/pallas-plugin-extension/: README.md  pyproject.toml
templates/pallas-plugin-extension/readmes/: pallas-plugin-ai-media.md  pallas-plugin-community-stats.md  pallas-plugin-draw.md  pallas-plugin-dream.md  pallas-plugin-llm-chat.md  pallas-plugin-ollama.md  pallas-plugin-party.md  pallas-plugin-protocol.md  pallas-plugin-social.md
templates/pallas-plugin-extension/src/pallas_plugin_TEMPLATE/: __init__.py
tests/: conftest.py  test_ingress_gate.py  test_log_error_source.py  test_shard_log_view_root.py  test_shard_process_guard.py  test_smoke.py
tools/: apply_deploy_profile.py  bootstrap_extension_repos.py  build_webui_dist.sh  check_console_openapi_drift.py  clear_old_image.py  export_pb_webui_openapi.py  import_legacy_accounts.py  integration_llm_chat.py  integration_repeater_llm.py  llm_prompt_lab.py  message_path_bench.py  migrate_image_cache_to_bytea.py  migrate_mongo_to_pg.py  plugin_perf_audit.py  sync_console_openapi.py
(+729 files in other folders)
