[project]
name = "pallas-plugin-TEMPLATE"
version = "4.0.0"
description = "Pallas Bot 官方扩展插件模板"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pallas-bot>=4.0",
    "nonebot2>=2.4.0",
    "nonebot-adapter-onebot>=2.4.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pallas_plugin_TEMPLATE"]

[tool.nonebot]
plugin_dirs = []
builtin_plugins = []

[tool.nonebot.plugins]
"@local" = []
pallas-plugin-template = ["pallas_plugin_TEMPLATE"]

[tool.nonebot.adapters]
"@local" = []
nonebot-adapter-onebot = [{ name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }]
